fixed picture and right align

--- a/Finalexam/finalExam.css
+++ b/Finalexam/finalExam.css
@@ -102,4 +102,7 @@ table {
 img {
     display: block;
     margin-left: auto;
+    height: 200px;
+    width: 200px;
+    object-fit: contain;
 }
